...
    android:orientation="vertical"
    tools:context="com.pan.lintpan.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/showSheetButton"
        android:text="Clicca qui" />

</LinearLayout>
